--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.4
 django-cors-headers==3.7.0
+django-environ==0.4.5
 django-rest-auth==0.9.5
 djangorestframework==3.12.4
 drf-yasg==1.20.0
