--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
-asgiref==3.3.4
+APScheduler==3.7.0
+asgiref==3.4.0
 certifi==2021.5.30
 chardet==4.0.0
 coreapi==2.3.3
 coreschema==0.0.4
 Django==3.2.4
+django-apscheduler==0.6.0
 django-cors-headers==3.7.0
 django-environ==0.4.5
 django-rest-auth==0.9.5
@@ -27,5 +29,6 @@ ruamel.yaml.clib==0.2.4
 simplejson==3.17.2
 six==1.16.0
 sqlparse==0.4.1
+tzlocal==2.1
 uritemplate==3.0.1
 urllib3==1.26.6
