--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,22 @@
 APScheduler==3.7.0
-asgiref==3.4.0
+argh==0.26.2
+asgiref==3.4.1
 certifi==2021.5.30
+cffi==1.14.5
 chardet==4.0.0
 coreapi==2.3.3
 coreschema==0.0.4
-Django==3.2.4
+Django==3.2.5
 django-apscheduler==0.6.0
 django-cors-headers==3.7.0
+django-dramatiq==0.10.0
 django-environ==0.4.5
 django-rest-auth==0.9.5
 djangorestframework==3.12.4
+dramatiq==1.11.0
 drf-yasg==1.20.0
+gevent==21.1.2
+greenlet==1.1.0
 idna==2.10
 inflection==0.5.1
 itypes==1.2.0
@@ -20,9 +26,14 @@ numpy==1.21.0
 openapi-codec==1.3.2
 packaging==20.9
 pandas==1.2.5
+pathtools==0.1.2
+pika==1.2.0
+prometheus-client==0.11.0
+pycparser==2.20
 pyparsing==2.4.7
 python-dateutil==2.8.1
 pytz==2021.1
+PyYAML==5.4.1
 requests==2.25.1
 ruamel.yaml==0.17.10
 ruamel.yaml.clib==0.2.4
@@ -32,3 +43,7 @@ sqlparse==0.4.1
 tzlocal==2.1
 uritemplate==3.0.1
 urllib3==1.26.6
+watchdog==0.8.3
+watchdog-gevent==0.1.0
+zope.event==4.5.0
+zope.interface==5.4.0
